[gd_scene load_steps=3 format=3 uid="uid://s2v7pw0kg1jp"]

[ext_resource type="Script" uid="uid://cu8ujnyywytvb" path="res://features/Duo/ui/character_mini_card.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.15, 0.15, 0.18, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.7, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CharacterMiniCard" type="PanelContainer"]
custom_minimum_size = Vector2(180, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_card")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Portrait" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "Nom"
horizontal_alignment = 1

[node name="ClassLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Classe"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 5
columns = 2

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "HP:"

[node name="HPValue" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "--/--"

[node name="ManaLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Mana:"

[node name="ManaValue" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 14
text = "--/--"

[node name="ATKLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "ATK:"

[node name="ATKValue" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "--"

[node name="DEFLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "DEF:"

[node name="DEFValue" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "--"
